@@ -1,0 +1,13 @@
+# the standard variables don't make sense for an uninstalled copy
+prefix=
+exec_prefix=
+libdir=${pcfiledir}/..
+includedir=${pcfiledir}/..
+
+Name: GStreamer networking library, uninstalled
+Description: Network-enabled GStreamer plug-ins and clocking, uninstalled
+Requires: gstreamer-@GST_MAJORMINOR@ = @VERSION@
+Version: @VERSION@
+
+Libs: ${libdir}/gst/net/libgstnet-tempname-@GST_MAJORMINOR@.la
+Cflags: -I${includedir}
