@@ -1,3 +1,10 @@
+2005-11-18  Andy Wingo  <wingo@pobox.com>
+
+	* configure.ac: 
+	* pkgconfig/gstreamer-net.pc.in:
+	* pkgconfig/gstreamer-net-uninstalled.pc.in:
+	* pkgconfig/Makefile.am: Add net pkgconfig files.
+
 2005-11-18  Stefan Kost  <ensonic@users.sf.net>
 
 	* gst/gstcaps.c:
